chore - remove static analyzer warnings